reorder by common new
